Fix autocomplete label on IE11

--- a/src/components/autocomplete/autocomplete.scss
+++ b/src/components/autocomplete/autocomplete.scss
@@ -66,8 +66,11 @@ md-autocomplete {
       min-width : 0;
 
       label {
-        z-index: -1;
+        z-index: 1;
       }
+    }
+    input {
+      z-index: 2;
     }
 
     md-progress-linear {
